--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,69 @@
+/* colors
+#5680E9
+#84CEEB
+#5AB9EA
+#C1C8E4
+#8860D0 */
+
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: white;
+  background-color: #282c34;
+  box-shadow: 2px 2px 4px #c1c8e4;
+  border-radius: 15px;
+  width: 80%;
+  min-height: 500px;
+  height: auto;
+}
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.boxList {
+  padding: 0;
+}
+
+input[type="text"] {
+  color: white;
+  display: inline-block;
+  border: none;
+  background: linear-gradient(
+      to right,
+      #c1c8e4 0%,
+      #84ceeb 12%,
+      #5680e9 47%,
+      #8860d0 100%
+    )
+    left bottom #5ab9ea no-repeat;
+  background-size: 100% 2px;
+  height: 25px;
+  width: auto;
+  background-color: transparent;
+}
+
+input[type="text"]:focus {
+  outline: none;
 }
 
 .App-header {
@@ -19,9 +72,53 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+button {
+  margin-left: 10px;
+  color: white;
+  font-weight: bold;
+  font-size: large;
+  border-radius: 6px;
+  margin-right: 10px;
+  border: solid 3px transparent;
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0),
+      rgba(255, 255, 255, 0)
+    ),
+    linear-gradient(101deg, #5680e9, #8860d0);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  box-shadow: 2px 1000px 1px #282c34 inset;
+  background-color: transparent;
+  transition-duration: 0.4s;
+}
+
+button:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+  box-shadow: 2px 1000px 1px transparent inset;
+}
+
+.x {
+  margin-right: 10px;
+  filter: invert(100%) sepia(0%) saturate(7500%) hue-rotate(308deg)
+    brightness(105%) contrast(104%);
+}
+
+.x:hover {
+  filter: invert(58%) sepia(70%) saturate(4539%) hue-rotate(231deg)
+    brightness(86%) contrast(88%);
+  cursor: pointer;
+}
+
+li {
+  margin: 5px;
+  height: 100%;
+  display: flex;
 }
 
 .App-link {
@@ -34,5 +131,11 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media screen and (display-mode: standalone) {
+  header {
+    height: 88px !important;
   }
 }
