--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   -webkit-tap-highlight-color: transparent;
   background-color: #282c34;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 code {
