--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ input[type="text"] {
     left bottom #5ab9ea no-repeat;
   background-size: 100% 2px; */
 
-  border-bottom: 2px solid #5680e9;
+  border-bottom: 2px solid #8860d0;
   height: 25px;
   width: auto;
   background-color: transparent;
@@ -87,7 +87,7 @@ button {
   font-size: large;
   border-radius: 6px;
   margin-right: 10px;
-  border: solid 3px #5680e9;
+  border: solid 3px #8860d0;
   /* background-image: linear-gradient(
       rgba(255, 255, 255, 0),
       rgba(255, 255, 255, 0)
@@ -132,15 +132,6 @@ p {
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 @media screen and (display-mode: standalone) {
