--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 ul {
@@ -33,6 +34,7 @@ ul {
   width: 100%;
   min-height: 500px;
   height: auto;
+  overflow-x: hidden;
 }
 
 .box {
