--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-color: #222429;
   min-height: 100vh;
   height: auto;
   display: flex;
@@ -29,7 +29,7 @@ ul {
   margin-top: 15px;
   margin-bottom: 15px;
   color: white;
-  background-color: #282c34;
+  background-color: #222429;
   border-radius: 15px;
   width: 100%;
   min-height: 500px;
@@ -158,6 +158,84 @@ p {
   100% {
     background-image: url("./mountain.gif");
   }
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+nav ul {
+  align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  list-style: none;
+  padding-right: 50px;
+}
+
+nav ul li {
+  font-size: x-large;
+  margin: 0px 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: black;
+  cursor: pointer;
+  text-shadow: 2px 5px 5px rgba(0, 0, 0, 0.2);
+}
+
+.mainMenu {
+  display: none;
+  border-radius: 0 15px 15px 0;
+  justify-content: flex-start;
+  margin: 0;
+  background-color: #222429;
+  position: absolute;
+  left: 0;
+  top: 0;
+  flex-direction: column;
+  width: 200px;
+  height: 50%;
+}
+.space {
+  margin-top: 20px;
+}
+
+.mainMenu li {
+  margin-top: 20px;
+}
+
+#toggle-icon {
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 10px;
+  cursor: pointer;
+  margin: 10px;
+  display: table;
+}
+.bar1,
+.bar2,
+.bar3 {
+  background-color: #8860d0;
+  width: 40px;
+  height: 4px;
+  transition: 0.5s;
+  margin: 7px 0;
+}
+.rotate-icon .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-8px, 6px);
+  transform: rotate(-45deg) translate(-8px, 6px);
+}
+.rotate-icon .bar2 {
+  opacity: 0;
+}
+.rotate-icon .bar3 {
+  -webkit-transform: rotate(42deg) translate(-9px, -8px);
+  transform: rotate(42deg) translate(-9px, -8px);
 }
 
 #Vector_23 {
