--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,13 @@ p {
   width: 100%;
 }
 
+.carddate {
+  width: 200px;
+  height: 200px;
+  background-color: white;
+  box-shadow: 5px 5px 8px #888888;
+}
+
 @media (min-width: 900px) {
 }
 
