--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 .App {
   text-align: center;
-  background-color: white;
+  background-color: var(--bg-color);
   min-height: 100vh;
   height: auto;
   display: flex;
@@ -31,6 +31,7 @@ ul {
 .x {
   width: 30px;
   margin-right: 10px;
+  filter: var(--icon-color);
 }
 
 .x:hover {
@@ -40,6 +41,7 @@ ul {
 }
 
 li {
+  color: var(--text-color);
   height: auto;
   display: flex;
   align-items: center;
@@ -57,29 +59,63 @@ p {
   align-items: center;
 }
 
-.datepicker {
-  background-color: white;
-  width: 100%;
-}
-
 .carddate {
   color: white;
   width: 180px;
   height: 150px;
-  border-radius: 25px;
+  border-radius: 15px;
   background: linear-gradient(to bottom, #1976d2 0%, #5ba5f0 100%);
-  box-shadow: 2px 2px 3px #888888;
+  /* box-shadow: 2px 2px 3px #888888; */
   transition-duration: 0.4s;
 }
+.css-1480iag-MuiInputBase-root-MuiInput-root:before {
+  border-bottom: 1px solid var(--text-color) !important;
+}
+.css-1x51dt5-MuiInputBase-input-MuiInput-input {
+  color: var(--text-color) !important;
+}
+.css-bkrceb-MuiButtonBase-root-MuiPickersDay-root {
+  background-color: transparent !important;
+  color: var(--text-color) !important;
+}
 
-.carddate2 {
-  color: white;
-  width: 180px;
-  height: 150px;
-  border-radius: 25px;
-  background-color: #d65858;
-  box-shadow: 2px 2px 3px #888888;
-  transition-duration: 0.4s;
+.css-bkrceb-MuiButtonBase-root-MuiPickersDay-root.Mui-selected:hover {
+  will-change: background-color;
+  background-color: #1976d2 !important;
+  color: white !important;
+}
+
+.css-195y93z-MuiButtonBase-root-MuiPickersDay-root {
+  background-color: transparent !important;
+}
+
+.css-195y93z-MuiButtonBase-root-MuiPickersDay-root:not(.Mui-selected) {
+  border: 1px solid var(--text-color) !important;
+}
+.css-195y93z-MuiButtonBase-root-MuiPickersDay-root {
+  color: var(--text-color) !important;
+}
+
+.css-195y93z-MuiButtonBase-root-MuiPickersDay-root.Mui-selected:hover {
+  will-change: background-color !important;
+  background-color: #1565c0 !important;
+  color: white !important;
+}
+
+.css-1w13o7u-MuiTypography-root {
+  color: var(--text-color) !important;
+}
+
+.css-l0iinn {
+  color: var(--text-color) !important;
+}
+
+.css-fd2y78-MuiSvgIcon-root {
+  color: var(--text-color) !important;
+}
+
+.css-i4bv87-MuiSvgIcon-root {
+  fill: var(--text-color) !important;
 }
 
 .carddate:hover {
