--- a/src/components/Nav/style.css
+++ b/src/components/Nav/style.css
@@ -4,7 +4,7 @@ nav {
   width: 100%;
   font-size: x-large;
   height: 50px;
-  background-color: var(--primary-color);
+  background-color: var(--bg-color);
   z-index: 10;
   box-shadow: 2px 2px 7px 01px rgba(0, 0, 0, 0.8);
 }
