--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@ p {
   /* box-shadow: 2px 2px 3px #888888; */
   transition-duration: 0.4s;
 }
-.css-1480iag-MuiInputBase-root-MuiInput-root:before {
+/* .css-1480iag-MuiInputBase-root-MuiInput-root:before {
   border-bottom: 1px solid var(--text-color) !important;
 }
 .css-1x51dt5-MuiInputBase-input-MuiInput-input {
@@ -116,7 +116,7 @@ p {
 
 .css-i4bv87-MuiSvgIcon-root {
   fill: var(--text-color) !important;
-}
+} */
 
 .carddate:hover {
   transform: scale(1.1);
