--- a/src/App.css
+++ b/src/App.css
@@ -100,8 +100,14 @@ p {
   0% {
     top: -200px;
   }
-  100% {
+  50% {
     top: 40px;
+  }
+  70% {
+    top: 40px;
+  }
+  100% {
+    top: -200px;
   }
 }
 
